// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    position VARCHAR 
    }

Table EmployeeDepartment {
    id INTEGER [primary key]
    employee_id INTEGER 
    department_id INTEGER 
    }

Table EmployeeProject {
    id INTEGER [primary key]
    employee_id INTEGER 
    project_id INTEGER 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR 
    start_date DATETIME 
    end_date DATETIME 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    stock_level INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table ProductSupply {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    supply_date DATETIME 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    }



// Relationships
    Ref: EmployeeDepartment.(department_id) < Department.(id)
    Ref: EmployeeDepartment.(employee_id) < Employee.(id)
    Ref: EmployeeProject.(employee_id) < Employee.(id)
    Ref: EmployeeProject.(project_id) < Project.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: ProductSupply.(product_id) < Product.(id)
    Ref: ProductSupply.(supplier_id) < Supplier.(id)
